--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,32 @@
 .App {
   text-align: center;
+  font-family: 'Times New Roman';
+  background-color: rgb(219, 123, 123);
+  
+  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.title {
+  color: red;
+  font-size: 20pt;
+  background-color: black;
+  padding: 1em;
+  margin-top: 0
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+button {
+  background-color: black;
+  color: red;
+  display: inline-block;
+  font-size: 14pt;
+  box-shadow: 0 5px 16px;
+  padding: 2px;
+  
 }
 
-.App-title {
-  font-size: 1.5em;
+.select{
+  background-color: black;
+  color: red;
+  font-size: 14pt
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
