--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,65 @@
 .App {
   text-align: center;
   font-family: 'Times New Roman';
-  background-color: rgb(219, 123, 123);
+  background: url(http://twinflamesmastery.com/wp-content/uploads/2017/04/cropped-the_heavens_and_us__with_video_tutorial_link__by_yuumei-d9jrqmp.jpg) no-repeat center fixed;
+  -webkit-background-size: cover;
   
   
 }
 
 .title {
-  color: red;
-  font-size: 20pt;
-  background-color: black;
+  color: rgb(247, 242, 242);
+  font-size: 50pt;
+  /* background-color: black; */
   padding: 1em;
-  margin-top: 0
+  margin-top: 0;
+  /* background: url(http://twinflamesmastery.com/wp-content/uploads/2017/04/cropped-the_heavens_and_us__with_video_tutorial_link__by_yuumei-d9jrqmp.jpg) ; */
+  
 }
 
-button {
-  background-color: black;
-  color: red;
+button{
+  background-color: rgb(41, 39, 161);
+  color: rgb(251, 250, 250);
   display: inline-block;
   font-size: 14pt;
   box-shadow: 0 5px 16px;
-  padding: 2px;
+  border: 0;
+  margin: 4px;
+  cursor: pointer;
+  padding: 15px 32px;
+  
+  
+  
   
 }
 
 .select{
-  background-color: black;
-  color: red;
-  font-size: 14pt
+  background-color: rgb(41, 39, 161);
+  color: rgb(251, 250, 250);
+  font-size: 14pt;
+  cursor: pointer;
+  border:0;
+  box-shadow: 0 5px 16px;
+  width:15%
+}
+
+
+p {
+  border: solid white;
+  /* background-color: white; */
+  margin-left: 18em;
+  margin-right: 18em;
+  text-shadow: 4px 4px rgb(19, 167, 204);
+  font-size: 20pt;
+  color: white
+}
+input{
+  padding: 15px 32px;
+  color: white;
+  background-color: rgb(41, 39, 161);
+  font-size: 16pt
+}
+::-webkit-input-placeholder{
+  color: white
 }
 
