--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ button{
   color: rgb(251, 250, 250);
   display: inline-block;
   font-size: 14pt;
-  box-shadow: 0 5px 16px;
+  box-shadow: 0 4px 16px;
   border: 0;
   margin: 4px;
   cursor: pointer;
@@ -39,19 +39,26 @@ button{
   font-size: 14pt;
   cursor: pointer;
   border:0;
+  display: block;
   box-shadow: 0 5px 16px;
-  width:15%
+  width:15%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
 
 
 p {
   border: solid white;
   /* background-color: white; */
-  margin-left: 18em;
-  margin-right: 18em;
+  margin-left: auto;
+  margin-right: auto;
   text-shadow: 4px 4px rgb(19, 167, 204);
   font-size: 20pt;
-  color: white
+  color: white;
+  display: table;
+  
+  
 }
 input{
   padding: 15px 32px;
